--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <!-- Navbar -->
-   <div>
+   <div class="navbar-container">
       <header class="navbar">
     <div class="logo">Xenotix Tech</div>
     <nav class="nav-links">
